<resources>
    <string name="facebook_app_id" translatable="false">0000000000000000</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb0000000000000000</string>
    <string name="admob_banner_ads_key" translatable="false">ca-app-pub-0000000000000000/0000000000</string>
    <string name="google_map_api_key" translatable="false">AI000000000000000000_000000000000000000</string>
    <string name="adview_publisher_key" translatable="false">pub-0000000000000000</string>
    <string name="razor_key" translatable="false">rzp_0000_00000000000000</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="item_detail__meetup" translatable="false">Meetup</string>
    <string name="item_detail__mailing_on_delivery" translatable="false">Mailing On Delivery</string>
    <string name="phone_login_phone_hint" translatable="false">+959121212121</string>
    <string name="history__title">History</string>
    <string name="title__activity_user_history_list">UserHistoryListActivity</string>
    <string name="favourite__title">Favourites</string>
    <string name="fb_register__welcome">Welcome from %1$s </string>
    <string name="fb_register__desc">Please login to use all features of application.</string>
    <string name="gallery__title">Gallery</string>
    <string name="gallery_image__gallery">Image Gallery</string>
    <string name="gallery_img__desc">Image Description</string>
    <string name="image_default__image">Default Image</string>
    <string name="app__app_name">PSBuySell</string>
    <string name="app__ok">OK</string>
    <string name="app__cancel">Cancel</string>
    <string name="app__noti_open">Open</string>
    <string name="app__noti_new_message">New Message</string>
    <string name="app__drawer_open">Drawer Open</string>
    <string name="app__drawer_close">Drawer Close</string>
    <string name="app__rating_message">You received new </string>
    <string name="app__rating_star">star rating.</string>
    <string name="menu__fb_login">Facebook Login</string>
    <string name="menu__comment_list">Comment List</string>
    <string name="menu__notification_list">Notification List</string>
    <string name="register__user_name">User Name</string>
    <string name="register__email">Email</string>
    <string name="register__password">Password</string>
    <string name="register__back_to_login">Already member ? Login</string>
    <string name="register__register">Register</string>
    <string name="register__new_account">Register New User Account</string>
    <string name="register__check_option">Are you agreement this privacy and policy?</string>
    <string name="forgot_password__title">Forgot Password</string>
    <string name="forgot_password__email">Email</string>
    <string name="forgot_password__back_to_login">Already member ? Login</string>
    <string name="forgot_password__password_recovery">Password Recovery</string>
    <string name="forgot_password__save">Save</string>
    <string name="forgot_password__send">Send</string>
    <string name="password_change__password">Password</string>
    <string name="password_change__save">Save</string>
    <string name="password_change__confirm_password">Confirm Password</string>
    <string name="password_change__password_change">Password Change</string>
    <string name="login__email">Email</string>
    <string name="login__password">Password</string>
    <string name="login__not_a_member_join_now">New here? Sign Up</string>
    <string name="login__forgot_your_password">Forgot password ?</string>
    <string name="login__login">SignIn</string>
    <string name="login__welcome_title">Welcome To PS Market Place</string>
    <string name="login__choice_text">OR</string>
    <string name="login__with_phone">SigIn with Phone</string>
    <string name="login__with_google">SignIn with Google</string>
    <string name="login__exception_error">There is something wrong.</string>
    <string name="login__failure_error">Authentication failed.</string>
    <string name="login__auth_email">This email is logged in with email and password. Please try to login with email and password.</string>
    <string name="login__auth_google">This email is logged in with Google. Please try to login with Google.</string>
    <string name="login__auth_facebook">This email is logged in with Facebook. Please try to login with Facebook.</string>
    <string name="login__fail">SignIn Failed</string>
    <string name="login__fail_account">Cannot SignIn your account</string>
    <string name="contact_us__name">Contact Name</string>
    <string name="contact_us__email">Contact Email</string>
    <string name="contact_us__message">Contact Message</string>
    <string name="contact_us__phone">Contact Phone</string>
    <string name="contact_us__submit">Submit</string>
    <string name="notification_setting__on_off">Notification Setting ( On/Off )</string>
    <string name="notification_setting__latest_message_from_system">Latest Message From System</string>
    <string name="notification__notification">Notification!</string>
    <string name="notification__title">Notification</string>
    <string name="notification_setting__title">Notification Setting</string>
    <string name="notification_detail__title">Notification Detail</string>
    <string name="notification__alert">Alert</string>
    <string name="notification__custom_alert">Notification</string>
    <string name="notification__custom_open">Open Item</string>
    <string name="language__english">English</string>
    <string name="language__arabic">Arabic</string>
    <string name="language__spanish">Spanish</string>
    <string name="language__language_change">Are you sure you want to change to %1$s?</string>
    <string name="language__title">Language</string>
    <string name="comment__replies">-- %1$s replies</string>
    <string name="comment__dates">-- %1$s </string>
    <string name="comment__title">Comment List</string>
    <string name="comment__detail_title">Comment Replies</string>
    <string name="comment__empty_comment">Comment is Empty.</string>
    <string name="comment__comment">Comment</string>
    <string name="rating__list">Rating List</string>
    <string name="rating__write_review">Write Review</string>
    <string name="rating__total_count">%1$s Customer Reviews</string>
    <string name="rating__total_value">%1$s out of 5 stars</string>
    <string name="rating__total_count_n_value">%1$s out of 5 stars (%2$s Reviews)</string>
    <string name="rating__count">%1$s star</string>
    <string name="rating__percent">%1$s %%</string>
    <string name="rating__in_stock">In Stock</string>
    <string name="rating__title">Title</string>
    <string name="rating__message">Message</string>
    <string name="rating__user_rating">User Rating Entry !</string>
    <string name="rating__your_rating">Your Rating</string>
    <string name="rating__five_star">5 star</string>
    <string name="rating__four_star">4 star</string>
    <string name="rating__three_star">3 star</string>
    <string name="rating__two_star">2 star</string>
    <string name="rating__one_star">1 star</string>
    <string name="rating__rating_range">Rating Range</string>
    <string name="rating__one">1 and higher</string>
    <string name="rating__two">2 and higher</string>
    <string name="rating__three">3 and higher</string>
    <string name="rating__four">4 and higher</string>
    <string name="rating__five">5 \n</string>
    <string name="rating__comar">","</string>
    <string name="rating_value">rating</string>
    <string name="rating_city_value">rating</string>
    <string name="dialog__title_m_mun">Sorting</string>
    <string name="popular__m_mun">Popular</string>
    <string name="recent__m_mun">Latest</string>
    <string name="char_asc__m_mun">A -> Z</string>
    <string name="char_desc__m_mun">Z -> A</string>
    <string name="edit_setting__notification_setting">Notification Setting</string>
    <string name="edit_setting__edit_profile">Edit Profile</string>
    <string name="edit_setting__logout">Logout</string>
    <string name="edit_setting__logout_question">Are you sure to logout ? </string>
    <string name="edit_setting__terms_and_conditions">Terms and Conditions</string>
    <string name="edit_setting__app_info">App Info</string>
    <string name="edit_setting__title">Setting</string>
    <string name="more__post_title">POSTS</string>
    <string name="more__activity_title">ACTIVITIES</string>
    <string name="more__setting_and_privacy">SETTING AND PRIVACY</string>
    <string name="more__pending_posts_title">Pending Posts</string>
    <string name="more__pending_list">Your pending list that is waiting approval from admin.</string>
    <string name="more__active_posts_title">Active Posts</string>
    <string name="more__active_list">Your posts that can able to search by other user.</string>
    <string name="more__paid_ads_title">Paid Ads</string>
    <string name="more__promote_list">Promoted item lists by you.</string>
    <string name="more__favourites_title">Favourites</string>
    <string name="more__favourites_posts">Posts that you like.</string>
    <string name="more__offer_title">Offers</string>
    <string name="more__offer_list">Received or sent offer list.</string>
    <string name="more__follower_title">Followers</string>
    <string name="more__follower_list">Users that follow you.</string>
    <string name="more__following_title">Following</string>
    <string name="more__following_list">Users that following by you.</string>
    <string name="more__history_title">History</string>
    <string name="more__history_list">Your browsing history.</string>
    <string name="more__block_user">Blocked Users</string>
    <string name="more__block_user_list">User list that you blocked.</string>
    <string name="more__report_item">Reported Items</string>
    <string name="more__report_item_list">Item list that you reported.</string>
    <string name="more__deactivate_account">Deactivate Account</string>
    <string name="menu__home">Home</string>
    <string name="menu__profile">Profile</string>
    <string name="menu__favourite_items">Favourite</string>
    <string name="menu__user_history">User History</string>
    <string name="menu__logout">Logout</string>
    <string name="menu__contact_us">Contact Us</string>
    <string name="menu__language">Language</string>
    <string name="menu__setting">Setting</string>
    <string name="menu__user">User</string>
    <string name="menu__interest">Interest</string>
    <string name="menu__app_setting">App</string>
    <string name="menu__user_info">User Info</string>
    <string name="menu__search">Search</string>
    <string name="menu__latest_item">Latest Items</string>
    <string name="menu__category">Category</string>
    <string name="menu__trending_item">Popular Items</string>
    <string name="menu__featured_items">Featured Items</string>
    <string name="menu__rate">Rate this app</string>
    <string name="menu__message">Message</string>
    <string name="menu__offer_item">Offer</string>
    <string name="menu__report_item">Reported Items</string>
    <string name="menu__blocked_users">Blocked Users</string>
    <string name="menu__privacy_policy">Privacy Policy </string>
    <string name="menu__paid_ad_transaction">Paid AD Transaction</string>
    <string name="dashboard_keyword">Keyword</string>
    <string name="location_filter__name">Name</string>
    <string name="location_filter__ordering" >Ordering</string>
    <string name="location_filter__app_default" >App Default</string>
    <string name="location_filter__latest" >Latest</string>
    <string name="location_filter__ascending" >Ascending</string>
    <string name="location_filter__descending" >Descending</string>
    <string name="location_filter__button" >Filter</string>
</resources>