<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loadingMore"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomboxlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/popularButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:background="@android:color/background_light"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/popular__m_mun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentButton" />

        <Button
            android:id="@+id/recentButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light"
            android:drawablePadding="10dp"
            android:text="@string/recent__m_mun"
            android:gravity="start|center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <Button
            android:id="@+id/lowestButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:text="@string/char_asc__m_mun"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popularButton" />

        <Button
            android:id="@+id/highestButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/char_desc__m_mun"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lowestButton" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/dialog__title_m_mun"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>